--- a/html/front-pages-no-customizer/landing-page.html
+++ b/html/front-pages-no-customizer/landing-page.html
@@ -1704,6 +1704,7 @@
     <script src="../../assets/vendor/libs/node-waves/node-waves.js"></script>
 
     <!-- endbuild -->
+    <script src="https://www.gptbots.ai/widget/wejx8m4ws8arow6w4xkbnle/chat.js"></script>
 
     <!-- Vendors JS -->
     <script src="../../assets/vendor/libs/nouislider/nouislider.js"></script>
